--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/Sdl.Community.DeepLMTProvider.csproj
@@ -1,37 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5BAEE9B8-1C76-4CA0-9921-4F3C82746A17}</ProjectGuid>
+    <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sdl.Community.DeepLMTProvider</RootNamespace>
-    <AssemblyName>Sdl.Community.DeepLMTProvider</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
@@ -115,121 +89,6 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client\DeepLGlossaryClient.cs" />
-    <Compile Include="Command\AsyncCommandWithParameter.cs" />
-    <Compile Include="Command\AsyncParameterlessCommand.cs" />
-    <Compile Include="Command\ParameterlessCommand.cs" />
-    <Compile Include="Command\CommandWithParameter.cs" />
-    <Compile Include="DeepLTellMe\DeepLSourceCodeAction.cs" />
-    <Compile Include="DeepLTellMe\WarningWindow\SettingsActionWarning.xaml.cs">
-      <DependentUpon>SettingsActionWarning.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Extensions\ActionResult.cs" />
-    <Compile Include="Extensions\CultureNameExtensions.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Extensions\ErrorHandler.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Helpers\GlossaryEntriesExtensions.cs" />
-    <Compile Include="Helpers\GlossaryReadersWriters\CsvGlossaryReaderWriter.cs" />
-    <Compile Include="Helpers\GlossaryReadersWriters\GlossaryReaderWriterFactory.cs" />
-    <Compile Include="Helpers\GlossaryReadersWriters\TsvGlossaryReaderWriter.cs" />
-    <Compile Include="Helpers\DialogWrapper.cs" />
-    <Compile Include="Helpers\ProcessStarter.cs" />
-    <Compile Include="Helpers\TsvReaderWriter.cs" />
-    <Compile Include="Interface\IGlossarySniffer.cs" />
-    <Compile Include="Interface\IDeepLGlossaryClient.cs" />
-    <Compile Include="Interface\IEditGlossaryService.cs" />
-    <Compile Include="Interface\IUserInteractionService.cs" />
-    <Compile Include="Interface\IGlossaryReaderWriter.cs" />
-    <Compile Include="Interface\IGlossaryReaderWriterFactory.cs" />
-    <Compile Include="Interface\IGlossaryReaderWriterService.cs" />
-    <Compile Include="Interface\IMessageService.cs" />
-    <Compile Include="Interface\IBrowseDialog.cs" />
-    <Compile Include="Interface\IProcessStarter.cs" />
-    <Compile Include="Interface\ITsvReaderWriter.cs" />
-    <Compile Include="Model\DeepLRequestParameters.cs" />
-    <Compile Include="Model\Glossary.cs" />
-    <Compile Include="Model\GlossaryDelimiterItem.cs" />
-    <Compile Include="Model\GlossaryEntry.cs" />
-    <Compile Include="Model\GlossaryInfo.cs" />
-    <Compile Include="Model\GlossaryItem.cs" />
-    <Compile Include="Model\GlossaryLanguagePair.cs" />
-    <Compile Include="Model\LanguagePairOptions.cs" />
-    <Compile Include="UI\Converters\NameToBoolConverter.cs" />
-    <Compile Include="Service\EditGlossaryService.cs" />
-    <Compile Include="Service\GlossaryBackupService.cs" />
-    <Compile Include="Service\GlossarySniffer.cs" />
-    <Compile Include="Service\UserInteractionService.cs" />
-    <Compile Include="Service\GlossaryReaderWriterService.cs" />
-    <Compile Include="Service\MessageService.cs" />
-    <Compile Include="Studio\DeepLMtTranslationProvider.cs" />
-    <Compile Include="Studio\DeepLMtTranslationProviderFactory.cs" />
-    <Compile Include="Studio\DeepLMtTranslationProviderLanguageDirection.cs" />
-    <Compile Include="Studio\DeepLMtTranslationProviderWinFormsUI.cs" />
-    <Compile Include="DeepLTellMe\DeepLCommunitySupportAction.cs" />
-    <Compile Include="DeepLTellMe\DeepLContactAction.cs" />
-    <Compile Include="DeepLTellMe\DeepLHelpAction.cs" />
-    <Compile Include="DeepLTellMe\DeepLSettingsAction.cs" />
-    <Compile Include="DeepLTellMe\DeepLTellMeProvider.cs" />
-    <Compile Include="Helpers\DeepLTranslationProviderTagPlacer.cs" />
-    <Compile Include="Model\DeepLTag.cs" />
-    <Compile Include="Model\PreTranslateSegment.cs" />
-    <Compile Include="Model\TagInfo.cs" />
-    <Compile Include="Model\TranslationDetails.cs" />
-    <Compile Include="Model\TranslationResponse.cs" />
-    <Compile Include="Helpers\NormalizeSourceTextHelper.cs" />
-    <Compile Include="PluginResources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PluginResources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\PluginProperties.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Helpers\StringExtensions.cs" />
-    <Compile Include="AppInitializer.cs" />
-    <Compile Include="Client\DeepLTranslationProviderClient.cs" />
-    <Compile Include="UI\BrowseGlossariesWindow.xaml.cs">
-      <DependentUpon>BrowseGlossariesWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\ImportEntriesWindow.cs">
-      <DependentUpon>ImportEntriesWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Controls\BrowsePathControl.xaml.cs">
-      <DependentUpon>BrowsePathControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Controls\ClearButtonTextBox.xaml.cs">
-      <DependentUpon>ClearButtonTextBox.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Controls\EditableTextBlock.xaml.cs">
-      <DependentUpon>EditableTextBlock.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\Converters\AddAllItemConverter.cs" />
-    <Compile Include="UI\DeepLWindow.xaml.cs">
-      <DependentUpon>DeepLWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Log.cs" />
-    <Compile Include="Model\DeepLTranslationOptions.cs" />
-    <Compile Include="Model\Formality.cs" />
-    <Compile Include="UI\EditGlossaryWindow.xaml.cs">
-      <DependentUpon>EditGlossaryWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\GlossariesWindow.xaml.cs">
-      <DependentUpon>GlossariesWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="UI\UiHelpers\WindowsControl.xaml.cs">
-      <DependentUpon>WindowsControl.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="ViewModel\DeepLWindowViewModel.cs" />
-    <Compile Include="ViewModel\GlossariesWindowViewModel.cs" />
-    <Compile Include="ViewModel\ViewModel.cs" />
-    <None Include="SdlCommunity.snk" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Information.png" />
     <Content Include="Resources\SourceCode.ico" />
     <Content Include="Resources\TellmeDocumentation.ico" />
@@ -239,104 +98,27 @@
     <Resource Include="Resources\deepl_Importentries.ico" />
     <Resource Include="Resources\deepl_ImportGlossaries.ico" />
     <Resource Include="Resources\Export_64b.png" />
-    <None Include="Resources\Settings.ico" />
     <EmbeddedResource Include="Resources\ForumIcon.ico" />
     <EmbeddedResource Include="Resources\TellMe1.ico" />
     <EmbeddedResource Include="Resources\Question.ico" />
     <Resource Include="Resources\deepLIcon.ico" />
     <Resource Include="Resources\deepLResized.png" />
     <Resource Include="Resources\deepL_logo_new.png" />
-    <EmbeddedResource Include="PluginResources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <Content Include="pluginpackage.manifest.xml">
       <SubType>Designer</SubType>
     </Content>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
       <Version>17.0.0</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <Page Include="DeepLTellMe\WarningWindow\SettingsActionWarning.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\BrowseGlossariesWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\ImportEntriesWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\Controls\BrowsePathControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\Controls\ClearButtonTextBox.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\Controls\EditableTextBlock.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\DeepLWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\EditGlossaryWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\GlossariesWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="UI\UiHelpers\ToggleButtonsStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\ButtonsStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\General.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\TextBlockStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\TextBoxStyle.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\WindowsBorder.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="UI\UiHelpers\WindowsControl.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
   </ItemGroup>
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
@@ -348,5 +130,4 @@
     <AssemblyOriginatorKeyFile>SdlCommunity.snk</AssemblyOriginatorKeyFile>
     <PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
   </PropertyGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
