Post-Edit Compare 8.0.1.0: [SDLCOM-5950 - Post-Edit Compare: Input string was not in a correct format]

--- a/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Versions.csproj
@@ -276,6 +276,7 @@
       <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <CreatePluginPackage>true</CreatePluginPackage>
   </PropertyGroup>
