Fix resources issue after SDK style upgrade

--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare/Sdl.Community.PostEdit.Compare.csproj
@@ -11,6 +11,7 @@
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
+    <EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
